# battlesol

./: .env.local  App.tsx  IMPLEMENTATION_SUMMARY.md  LIVE_MULTIPLAYER_IMPLEMENTATION.md  README.md  index.css  index.html  index.tsx  package-lock.json  package.json  test-all-features.md  types.ts  vercel.json
battle-solofficial/: App.tsx  index.html  metadata.json  package-lock.json  package.json  types.ts  vercel.json
battle-solofficial/backend/: Anchor.toml  Cargo.toml  README.md
battle-solofficial/backend/src/: lib.rs
battle-solofficial/components/: AdminPanel.tsx  DailyBattleModal.tsx  Dashboard.tsx  DepositView.tsx  FleetStatus.tsx  Footer.tsx  GameBoard.tsx  GameOverModal.tsx  GameView.tsx  Header.tsx  Icons.tsx  LandingPage.tsx  MatchmakingModal.tsx  NftCard.tsx  NftStore.tsx  PresaleView.tsx  ProfileView.tsx  ProvablyFairView.tsx  RankSystemInfo.tsx  ShotResultModal.tsx  SiteWideChat.tsx  WalletContextProvider.tsx  WithdrawView.tsx
battle-solofficial/nft_collection/: collection.json
battle-solofficial/services/: betaTestingService.ts  feeService.ts  geminiService.ts  multiplayerService.ts  rankService.ts  solanaService.ts  userManagementService.ts
components/: ChatBox.tsx  Dashboard.tsx  FleetStatus.tsx  GameBoard.tsx  GameModeCard.tsx  GameView.tsx  Header.tsx  Icons.tsx  LandingPage.tsx  MatchmakingModal.tsx  NftCard.tsx  NftStore.tsx  TurnSwitchScreen.tsx
cypress/e2e/: guest_game.cy.js
services/: geminiService.ts  solanaService.ts
