[package]
name = "battle-sol-contracts"
version = "0.1.0"
description = "Battle Sol - Provably Fair Battleship Game Smart Contracts"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "battle_sol_contracts"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "1.18.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
borsh = "0.10.3"
sha2 = "0.10.8"

[dependencies.getrandom]
version = "0.2"
features = ["custom"]

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"
tokio = { version = "1.0", features = ["macros"] }